# LLM-Projects

./: .gitignore  requirements.txt  template.py
1. Mini Chatbot/: first_message.py  memory_trimming.py
10_quantization/: README.md  requirements.txt
10_quantization/benchmarks/: latency.txt  memory.txt  quality_notes.md
10_quantization/docs/: gguf_explained.md  quantization_tradeoffs.md  theory.md
10_quantization/ollama/: Modelfile  run_ollama.md
10_quantization/scripts/: benchmark.py  convert_to_gguf.py  download_model.py  quantize_model.py
1_mini_chatbot/: README.md  model_context.py  parameters.py  streaming_chat.py  system_prompts.py
1_mini_chatbot/final/: main.py
2. Mini RAG/: main.py
2. Mini RAG/embeddings/: metadata.pkl
2. Mini RAG/src/: chunker.py  vectordb.py
2_mini_rag/: README.md
3.Embedding Similarity Search/: README.md
3_embedding_similarity_search/: README.md  main.py
4. FAISS Vector Search/: main.py
4_faiss_vector_search/: README.md
5_imdb_sentiment_analysis/: README.md  pyproject.toml
5_imdb_sentiment_analysis/scripts/: run_baseline.py
5_imdb_sentiment_analysis/src/: evaluation.py  inference.py  preprocessing.py
5_imdb_sentiment_analysis/src/baseline/: evaluate_baseline.py  train_baseline.py
5_imdb_sentiment_analysis/src/transformer/: evaluate_transformer.py  train_transformer.py
6_query_rewriting_reranking/: README.md  index_ivf.faiss  main.py
7_calculator_agent/: README.md  main.py
8_azerbaijani_ner_lora/: README.md  main.py
9_prompt_evaluation_dashboard/: README.md  requirements.txt
(+75 files in other folders)
